# vega-ingest

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.vast  README.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: DEMO.md  DESIGN-scale-ocr.md  TEST-vast.md
scripts/: setup_vm.sh
tests/: conftest.py  test_batch_ocr.py  test_chunker.py  test_cli.py  test_integration.py  test_languages.py  test_ocr_need.py  test_ocr_selection.py  test_pdf.py  test_pipeline.py  test_router.py  test_surya_backend.py  test_text_recovery.py
vega/: __init__.py  cli.py  config.py  languages.py  model.py  pipeline.py  records.py  router.py  text_recovery.py  tokenization.py  writer.py
vega/chunkers/: __init__.py  structure.py
vega/ocr/: __init__.py  base.py  cache.py  easyocr_backend.py  selection.py  surya_backend.py  tesseract.py
vega/parsers/: __init__.py  base.py  image.py  pdf.py  text.py
